--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,16 +11,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
+    - uses: actions/checkout@v4
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ vars.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -37,4 +35,4 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         target: final
-        tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+        tags: ${{ vars.DOCKER_USERNAME }}/surveyapp:latest
