--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
-        context: .
+        context: SurveyApp/.
         push: true
         target: final
         tags: ${{ vars.DOCKER_USERNAME }}/surveyapp:latest
