--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,6 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Extract Docker image metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ vars.DOCKER_USERNAME }}/surveyapp
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -33,5 +42,8 @@ jobs:
         context: SurveyApp/.
         push: true
         target: final
-        tags: ${{ vars.DOCKER_USERNAME }}/surveyapp:latest
+        tags: ${{ steps.meta.outputs.tags }}
+        annotations: ${{ steps.meta.outputs.annotations }}
+        # provenance: true
+        # sbom: true
 
